# jwwlib-wasm

./: .biomeignore  .gitignore  .npmignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.ja.md  README.md  SECURITY.md  TROUBLESHOOTING.md  biome.json  build_debug.sh  build_release.sh  commitlint.config.js  index-old.html  index.d.ts  package.json  pnpm-lock.yaml  test-memory-optimization.html  test-new-entities.html  test-server.py  test-text-entity.html  vite.config.js  vitest.config.ts
.claude/commands/cccsc/f4ah6o/cccsc/: kiro.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  sbom.yml  semantic-release.yml
docs/: API-NEW-ENTITIES.md  NPM_SETUP.md
examples/: README.md  debug.html  gallery.html  index.html  new-entities-example.html  new-entities-sample.ts  node-example.js  simple-test.js  test.html  text-encoding-utils.js
include/: rs_debug.h  wasm_encoding.h
scripts/: prepare-initial-release.sh  run-unit-tests.sh  setup-npm-token.sh
src/: check-node-version.js
src/core/: dl_jww.cpp
src/js/: jwwlib-types.d.ts  jwwlib.js
src/wasm/: batch_processing.h  memory_optimization.cpp  wasm_bindings.cpp  wasm_encoding.cpp
test/pbt/docs/: reporting-guide.md
test/pbt/framework/generators/: lazy_generator.hpp
test/pbt/framework/parallel/: parallel_test_runner.cpp  parallel_test_runner.hpp  resource_monitor.cpp  resource_monitor.hpp
test/pbt/framework/reporting/: data_visualizer.cpp  data_visualizer.hpp  html_report_generator.cpp  html_report_generator.hpp  test_metrics.cpp  test_metrics.hpp
test/pbt/framework/storage/: counterexample_database.cpp  counterexample_database.hpp
test/pbt/generators/: lazy_jww_generators.hpp
test/pbt/tests/: test_parallel_execution.cpp  test_reporting.cpp
tests/: CMakeLists.txt  setup.ts
tests/e2e/: package.json  playwright.config.js
tests/e2e/specs/: entity-extraction.spec.js  file-reading.spec.js  memory-management.spec.js  module-loading.spec.js
tests/fixtures/: test-entities.jww
tests/integration/: new-entities.test.ts
tests/pbt/: CMakeLists.txt  README.md
tests/pbt/generators/: arc_generator.h  circle_generator.h  document_generator.h  jww_entity_generators.h  layer_generator.h  line_generator.h  text_generator.h
tests/pbt/include/: counterexample_minimizer.h  jww_test_entities.h  pbt_exception.h  property_base.h  property_builder.h  test_execution_config.h
tests/pbt/integration/: CMakeLists.txt  gtest_adapter.hpp  gtest_main.cpp  run_tests_with_coverage.sh.in  test_parser_properties_gtest.cpp  test_utils.hpp  test_wasm_properties_gtest.cpp
tests/pbt/properties/: error_handling_properties.h  parser_properties.h  wasm_binding_properties.h
tests/pbt/scripts/: reproduce_failure.sh  run_pbt_tests.sh
tests/pbt/tests/: test_error_handling_properties.cpp  test_parser_properties.cpp  test_wasm_binding_properties.cpp
tests/unit/: CMakeLists.txt  test_batch_processing.cpp  test_memory_leaks.cpp  test_new_entities.cpp  test_wasm_interface.cpp
wasm/: jwwlib.cjs
